Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -11,9 +11,11 @@
 \usepackage{subcaption}
 \usepackage{natbib}
 
+
 \graphicspath{{figures/}}
 \title{Group Effects of Idealized Debris Fields Driven by Tsunami-like Wave}
-\date{October 2025}
+\author{Noemie Koenig, Marc O. Eberhard, Pedro Arduino, Micheal Motley, Dakota Mascarenas}
+\date{\today}
 
 \begin{document}
 
@@ -25,7 +27,7 @@ Tsunami-driven debris fields create complex and highly variable loads on coastal
 \section{Introduction}
 Tsunami-driven debris fields pose significant hazards to coastal infrastructure, as they generate both short-duration impact loads and longer-lasting damming loads. Debris-induced forces are difficult to predict, because the complex interaction between fluid, structure, and debris creates significant uncertainty in estimating waterborne debris loads and reactions. Unlike single-object impacts, debris fields produce both sharp, short-duration impact forces and longer-lasting damming forces. Understanding how debris orientation, arrangement, and initial packing ratio influence these loading mechanisms is critical for resilient coastal infrastructure design. The objective of this study is to categorize group effects within debris fields and identify the governing mechanisms of debris–structure interaction. Large-scale flume experiments were conducted with systematically varied initial conditions, including debris orientation (longitudinal, transverse, and random), packing ratio, and size distribution (single-size vs.\ multi-size). The results highlight clear differences in impact amplification, damming behavior, and the role of randomness in debris loading.
 
-Longitudinal debris alignments (i.e., oriented parallel to the incoming flow) tend to produce larger impacts than transverse configurations, while random fields display greater variability in impact magnitudes. Similarly, single-size debris groups behave differently than multi-size fields, particularly in their ability to form blockages and generate damming forces. Finally, packing ratio defined as the ratio of tightly packed debris cross-sectional area to the total spread area controls the degree of clogging and thus the overall magnitude of structural loading.
+Longitudinal debris alignments (i.e., oriented parallel to the incoming flow) tend to produce larger impacts than transverse configurations, while random fields display greater variability in impact magnitudes. Similarly, single-size debris groups behave differently than multi-size fields, particularly in their ability to form blockages and generate damming forces. Finally packing ratio, defined as the ratio of tightly packed debris area to the total spread area, controls the degree of clogging and thus the overall magnitude of structural loading.
 
 \section{Previous Research} Post-tsunami surveys found that debris-driven damage has been a recurring failure mechanism. Reinforced concrete failures were observed during the 2004 Indian Ocean and 2011 Tohoku tsunamis, where large floating debris caused extensive structural damage \citep{Leonard2011,Akiyama2013}. Recent reviews highlight the need for deeper study of how debris becomes mobilized and transfers momentum to structures, along with probabilistic approaches that reflect debris variability and source proximity, and more attention to the cumulative effects of repeated impacts and damming as debris clusters form \citep{nistorTsunamiDrivenDebrisMotion2017}.
 Foundational studies approached debris impact from different perspectives. Haehnel and Daly \citep{Haehnel2004} performed flume experiments with flood-driven wooden debris and introduced single-degree-of-freedom (SDOF) formulations to reproduce collision behavior. Naito et al. \citep{Naito2016} prioritized a design-oriented framework where the Energy Grade Line (EGL) method was proposed to estimate debris velocities, impact forces, and critical impact elevations for coastal structures. Building on these efforts, Stolle et al. \citep{Stolle2018,Stolle2019} conducted flume experiments that demonstrated how impact and damming loads can be separated through signal decomposition and suggested an added mass term to better represent hydrodynamic effects. Recent research also highlights the importance of  fully submerged debris, which can alter the magnitude and timing of structural loading. Deschamps et al. \citep{deschampsNegativelyBuoyantDebris2025} investigated negatively buoyant debris under tsunami-like flows, showing that debris that sinks or stays near the bed can generate distinct impact and damming forces compared with floating debris, emphasizing the need to consider a full range of buoyancy conditions in structural load assessments.
@@ -40,7 +42,7 @@ The experiments were conducted in the Large Wave Flume at the NHERI (O.H. Hinsda
  
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=1.2\textwidth]{WaveFlume.pdf}
+  \includegraphics[width=1\textwidth]{WaveFlume.pdf}
   \caption{ Flume instrumentation adapted from \citep{winterTsunamiLikeWaveForces2020}.}
   \label{fig:waveflume}
 \end{figure}
@@ -66,13 +68,13 @@ The internal frame used hollow steel sections for stiffness, with additional alu
         \label{fig:teststructure_back}
     \end{subfigure}
     \caption{Front and back views of the test structure used in the debris impact experiments. 
-    The front view shows the exposed face subjected to debris impact, while the back view highlights the instrumentation and load cell mounting.}
+    The front is the exposed face subjected to debris impact, while the back shows the instrumentation and load cell mounting.}
     \label{fig:teststructure_views}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=1.1\textwidth]{Configurations.pdf}
+    \includegraphics[width=1\textwidth]{Configurations.pdf}
     \caption{Schematics of regular debris configurations.}
     \label{fig:configurations}
 \end{figure}
@@ -80,7 +82,7 @@ The internal frame used hollow steel sections for stiffness, with additional alu
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=1.1\textwidth]{configurations_rand.pdf}
+    \includegraphics[width=1\textwidth]{configurations_rand.pdf}
     \caption{Schematics of random debris configurations.}
     \label{fig:configurations_random}
 \end{figure}
