--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 
 \graphicspath{{figures/}}
 \title{Group Effects of Idealized Debris Fields Driven by Tsunami-like Wave}
-\author{Noemie Koenig, Marc O. Eberhard, Pedro Arduino, Micheal Motley, Dakota Mascarenas}
+% \author{Noemie Koenig, Marc O. Eberhard, Pedro Arduino, Micheal Motley, Dakota Mascarenas}
 \date{\today}
 
 \begin{document}
@@ -43,7 +43,7 @@ The experiments were conducted in the Large Wave Flume at the NHERI (O.H. Hinsda
 \begin{figure}[htbp]
   \centering
   \includegraphics[width=1\textwidth]{WaveFlume.pdf}
-  \caption{ Flume instrumentation adapted from \citep{winterTsunamiLikeWaveForces2020}.}
+  \caption{ Large  ﬂume at the Hinsdale Wave Research Laboratory (a) elevation view and (b) plan view. Adapted from \citep{winterTsunamiLikeWaveForces2020}.}
   \label{fig:waveflume}
 \end{figure}
 
@@ -68,13 +68,13 @@ The internal frame used hollow steel sections for stiffness, with additional alu
         \label{fig:teststructure_back}
     \end{subfigure}
     \caption{Front and back views of the test structure used in the debris impact experiments. 
-    The front is the exposed face subjected to debris impact, while the back shows the instrumentation and load cell mounting.}
+    The front (a) is the exposed face subjected to debris impact, while the back (b) shows the instrumentation and load cell mounting.}
     \label{fig:teststructure_views}
 \end{figure}
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=1\textwidth]{Configurations.pdf}
+    \includegraphics[width=1\textwidth]{figures/Configurations.pdf}
     \caption{Schematics of regular debris configurations.}
     \label{fig:configurations}
 \end{figure}
@@ -82,7 +82,7 @@ The internal frame used hollow steel sections for stiffness, with additional alu
 
 \begin{figure}[htbp]
     \centering
-    \includegraphics[width=1\textwidth]{configurations_rand.pdf}
+    \includegraphics[width=1\textwidth]{figures/configurations_rand.pdf}
     \caption{Schematics of random debris configurations.}
     \label{fig:configurations_random}
 \end{figure}
@@ -167,7 +167,7 @@ A total of 29 configurations were tested in the large wave flume. These included
 \begin{figure}[htbp]
     \centering 
     \includegraphics[width=0.9\textwidth]{high_low_pass.png} 
-    \caption{Force decomposition using Butterworth filters.} 
+    \caption{Filtered and unfiltered force signals demonstrating the effect of a 4th-order Butterworth filter (cutoff = 2.5 Hz) used for force decomposition.} 
     \label{fig:high_low_pass} 
 \end{figure}
 
@@ -175,46 +175,48 @@ Force time histories were decomposed with Butterworth filters: high-pass filteri
 
 \begin{figure}[h!]
     \centering
-    \begin{subfigure}[b]{0.48\textwidth}
+    \begin{subfigure}[b]{0.7\textwidth}
         \centering
         \includegraphics[width=\textwidth]{Reg_Lift_U_1_L_D__Masters_NHERIDeprisImpact2_goodtests_Reg_Lift_U_1_L_Trial04_Peak.png}
-        \caption{1 L debris.}
+        \caption{Reaction Force Time History of a 1 L debris trial.}
         \label{fig:timehist_1L_peak}
     \end{subfigure}
     \hfill
-    \begin{subfigure}[b]{0.48\textwidth}
+    \begin{subfigure}[b]{0.7\textwidth}
         \centering
         \includegraphics[width=\textwidth]{Reg_Lift_U_24_L_D__Masters_NHERIDeprisImpact2_goodtests_Reg_Lift_U_24_L_Trial04_Peak.png}
-        \caption{24 L debris.}
+        \caption{Reaction Force Time History of a 24 L debris trial.}
         \label{fig:timehist_24L_peak}
     \end{subfigure}
-    \caption{Reaction Force time histories filtered to isolate impact forces.}
+    \caption{Comparison of reaction force time histories for (a) 1 L and (b) 24 L debris trials, filtered to isolate impact force. First and later peak indicated.}
     \label{fig:timehist_combined}
 \end{figure}
-
 \begin{figure}[h!]
     \centering
-    \begin{subfigure}[b]{0.48\textwidth}
+    % First subfigure
+    \begin{subfigure}[b]{0.7\textwidth}
         \centering
         \includegraphics[width=\textwidth]{Reg_Lift_U_1_L_D__Masters_NHERIDeprisImpact2_goodtests_Reg_Lift_U_1_L_Trial04_Damming.png}
-        \caption{1 L debris.}
+        \caption{Reaction Force Time History of a 1 L debris trial.}
         \label{fig:timehist_1L_damming}
     \end{subfigure}
     \hfill
-    \begin{subfigure}[b]{0.48\textwidth}
+    % Second subfigure
+    \begin{subfigure}[b]{0.7\textwidth}
         \centering
         \includegraphics[width=\textwidth]{Reg_Lift_U_24_L_D__Masters_NHERIDeprisImpact2_goodtests_Reg_Lift_U_24_L_Trial04_Damming.png}
-        \caption{24 L debris.}
+        \caption{Reaction Force Time History of a 24 L debris trial.}
         \label{fig:timehist_24L_damming}
     \end{subfigure}
-    \caption{Reaction Force time histories filtered to isolate damming forces.}
+    % Overall caption
+    \caption{Comparison of reaction force time histories for (a) 1 L and (b) 24 L debris trials, filtered to isolate damming forces. Maximum damming force and maximum unbroken wave force indicated.}
     \label{fig:timehist_damming_combined}
 \end{figure}
 
 
 Video evidence combined with filtered force records revealed that debris impacts occur in two distinct stages. The first stage is the initial unsubmerged impact, where debris pieces strike the structure immediately upon arrival (Figure~\ref{fig:first_impact}). These impacts are characterized by a sharp peak, particularly in longitudinal configurations. The debris pieces strike simultaneously and then scatter. The second stage consists of later submerged impacts, which arise when debris recirculates downstream and strikes the structure again under submerged conditions (Figure~\ref{fig:second_impact}). Unlike the first impact, these later impacts are more scattered, chaotic, and prolonged, especially in tests involving larger numbers of debris pieces. The distinction between first and later impacts proved consistent across all debris types and configurations, underscoring the need to treat these two stages as separate mechanisms in structural analysis.
 
-Signal peaks were identified within predefined time intervals, determined from video observations of the debris motion. The first impact was detected within the initial time window, while subsequent impacts were identified by considering only times after the first impact and excluding the first impact. 
+Signal peaks were identified within predefined time intervals, determined from video observations of the debris motion. The first impact was detected within the initial time window before 34.2 s, while subsequent impacts were identified by considering the highest impacts after the first impact and excluding the first impact. 
 
 \begin{figure}[htbp]
     \centering
@@ -260,20 +262,21 @@ where \( R_{damming,\mathrm{max}} \) is the maximum damming force and \( R_{\mat
 
 \section{Reaction Force Response to Single Debris Pieces} 
 \subsection{Comparing In-Air to In-Water structural response} 
-A total of 32 In-Air pendulum impact tests were conducted to characterize the dynamic behavior of the test structure. Each test involved a single debris piece of identical dimensions to the 1L configuration, suspended from a cable and released to impact the structure longitudinally in air. The debris was released from three drop-off heights (0.5, 0.75, and 1.0 m), corresponding to increasing impact velocities. This setup isolates the structural response to debris impact under controlled, repeatable conditions without hydrodynamic effects. The corresponding structural response for both the in-air and in-water cases is shown in Figure~\ref{fig:normalized_forces_structure}.The reaction force signal recorded by the load cells at the back of the structure showed oscillatory behavior which corresponds to the dynamic response of several elements of the structure. Frequency spectra obtained through Fast Fourier Transform (FFT) analysis revealed three main amplification peaks, identified as the primary vibration modes of the structure, as summarized in Table \ref{tab:mode_summary}. After identifying the modes a bandwidth filter has been applied to the reaction force signal. After identifying the impacts a 0.5 seconds time window has been used to find the damping from the logarithmic decrement. These same modes were later confirmed for the 1 L configuration In-Water, where the natural frequencies decreased, which can be attributed to the added mass of water surrounding the structure. By isolating the modes in the reaction force signal, damping ratios were determined for each mode. The results showed an increase in damping when the structure was submerged, consistent with greater energy loss caused by fluid–structure interaction. The In-Air tests showed very low variability between trials in identifying the modes and damping ratios, while the in-water tests had higher standard deviations.
+A total of 32 In-Air pendulum impact tests were conducted to characterize the dynamic behavior of the test structure. Each test involved a single debris piece of identical dimensions to the 1L configuration, suspended from a cable and released to impact the structure longitudinally in air. The debris was released from three drop-off heights (0.5, 0.75, and 1.0 m), corresponding to increasing impact velocities. This setup isolates the structural response to debris impact under controlled, repeatable conditions without hydrodynamic effects. The corresponding structural response for both the in-air and in-water cases is shown in Figure~\ref{fig:normalized_forces_structure_air_water}.The reaction force signal recorded by the load cells at the back of the structure showed oscillatory behavior which corresponds to the dynamic response of several elements of the structure. Frequency spectra obtained through Fast Fourier Transform (FFT) analysis revealed three main amplification peaks, identified as the primary vibration modes of the structure, as summarized in Table \ref{tab:mode_summary}. After identifying the modes a bandwidth filter has been applied to the reaction force signal. After identifying the impacts a 0.5 seconds time window has been used to find the damping from the logarithmic decrement. These same modes were later confirmed for the 1 L configuration In-Water, where the natural frequencies decreased, which can be attributed to the added mass of water surrounding the structure. By isolating the modes in the reaction force signal, damping ratios were determined for each mode. The results showed an increase in damping when the structure was submerged, consistent with greater energy loss caused by fluid–structure interaction. The In-Air tests showed very low variability between trials in identifying the modes and damping ratios, while the in-water tests had higher standard deviations.
 
 
 \begin{figure}[ht]
     \centering
     \includegraphics[width=\linewidth]{figures/plot_normalized_forces_in_air_vs_in_water_overlay.png}
-    \caption{Normalized force responses for the In-Air test and 1 L configurations. Each subplot is normalized by its respective maximum force.}
-    \label{fig:normalized_forces_structure}
+    \caption{Normalized force responses for the In-Air test and the In-Water test. Damping Ratio evaluation window denoted by dashed lines. Each plot is normalized by its respective maximum force.}
+    \label{fig:normalized_forces_structure_air_water}
 \end{figure}
 
 
 \begin{table}[ht]
 \centering
 \small
+\caption{Median natural frequencies and damping ratios for In-Air (1L) and In-Water (1L) tests.}
 \begin{tabular}{c c c c c c c c c}
 \hline
 Mode & \multicolumn{4}{c}{In-Air (1L)} & \multicolumn{4}{c}{In-Water (1L)} \\
@@ -286,21 +289,19 @@ Mode 2 & 13.874 & 0.146 & 1.20 & 0.52 & 10.321 & 0.385 & 5.61 & 1.84 \\
 Mode 3 & 19.940 & 0.084 & 0.91 & 0.20 & 19.582 & 0.160 & 1.66 & 0.23 \\
 \hline
 \end{tabular}
-
-\caption{Median natural frequencies and damping ratios for In-Air (1L) and In-Water (1L) tests.}
 \label{tab:mode_summary}
 \end{table}
 
 
 \subsection{In-Water - Single Debris Trials of Varying Size} 
 
-All five single-piece configurations (10 trials each) were conducted to evaluate the effect of debris size on the reaction force. These tests aimed to characterize the behavior of individual debris pieces before examining group effects. Figure~\ref{fig:firstpeak_regular} shows the reaction force measured for single debris pieces with varying orientations. Higher variability is observed in the transverse orientation. 
+All five single-piece configurations (10 trials each) were conducted to evaluate the effect of debris size on the reaction force. These tests aimed to characterize the behavior of individual debris pieces before examining group effects. Figure~\ref{fig:firstpeak_regular_size} shows the reaction force measured for single debris pieces with varying orientations. Higher variability is observed in the transverse orientation. 
 
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=\textwidth]{FirstPeak_Regular_SplitByTrial_single.png}
-    \caption{Comparison of debris size at the first impact for regular configurations. The debris count in initial configurations is indicated within the boxplots.}
-    \label{fig:firstpeak_regular}
+    \caption{Comparison of debris size at the first impact for regular configurations. Baseline for Normalization as indicated is the 1L median impact.}
+    \label{fig:firstpeak_regular_size}
 \end{figure}
 
 
@@ -308,7 +309,7 @@ All five single-piece configurations (10 trials each) were conducted to evaluate
 \subsection{Regular Configurations}
 \subsubsection{Impact Reaction Forces} 
 Figure~\ref{fig:firstpeak_regular_split} and Figure~\ref{fig:laterpeak_regular_remap} show the impact reaction forces from the first and second impacts. The boxplot whiskers represent the minimum and maximum values, the boxes indicate the interquartile range (IQR), and the solid line within each box marks the median value.
-For specific cases such as the 24T-W and 16T-W tests, the width of the debris field exceeded the structure’s width. Consequently, not all debris pieces made contact with the structure. To address this limitation, the data was adjusted to reflect the amount of pieces impacting the structure.  Remapping makes the 24T-W case comparable to a 12T case, the total debris count still altered the flume hydrodynamics. This explains why the forces for the adjusted debris count appear lower than the corresponding smaller-group tests. 
+For specific cases such as the 24T-W and 16T-W tests, the width of the debris field exceeded the structure’s width. Consequently, not all debris pieces made contact with the structure. To address this limitation, the data was adjusted to reflect the amount of pieces impacting the structure.  Remapping makes the 24T-W case comparable to a 12T case. It is possible that the total debris count continued to affect the flume hydrodynamics via fluid–debris interactions, potentially contributing to the lower forces observed in the adjusted debris-count tests compared with the smaller-group cases.
 
 In regular configurations, the first impacts scaled approximately linearly with the number of debris pieces (Figure~\ref{fig:firstpeak_regular_split}). This relationship was clear across both longitudinal and transverse configurations. Later impacts, by contrast, exhibited nonlinear behavior, showing growth that eventually saturated as debris counts increased (Figure~\ref{fig:laterpeak_regular_remap}). This saturation suggests that once a certain number of pieces are present, additional debris no longer contributes significantly to impact loading because not all debris strike the structure simultaneously.
 
@@ -319,14 +320,14 @@ Longitudinal configurations consistently produced the highest impact forces, whi
     \begin{subfigure}[t]{0.9\textwidth}
         \centering
         \includegraphics[width=\textwidth]{FirstPeak_Regular_SplitByTrial.png}
-        \caption{Debris count in initial configurations as shown in Figure~\ref{fig:configurations}.}
+        \caption{Total number of debris pieces within the flume.}
         \label{fig:firstpeak_regular_original}
     \end{subfigure}
     \hfill
     \begin{subfigure}[t]{0.9\textwidth}
         \centering
         \includegraphics[width=\textwidth]{FirstPeak_Regular_RemappedT.png}
-        \caption{Debris count adjusted using total of pieces impacting structure.}
+        \caption{Debris count of pieces causing structural impact.}
         \label{fig:firstpeak_regular_remap}
     \end{subfigure}
     \caption{First impact forces in regular configurations for longitudinal and transverse orientations.}
@@ -336,7 +337,7 @@ Longitudinal configurations consistently produced the highest impact forces, whi
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.9\textwidth]{LaterPeak_Regular_RemappedT.png}
-    \caption{Debris count adjusted using total of pieces impacting structure.}
+    \caption{Debris count of pieces causing structural impact.}
     \label{fig:laterpeak_regular_remap}
 \end{figure}
 
@@ -347,7 +348,7 @@ Damming forces were extracted from low-pass filtered signals, capturing the sust
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.9\textwidth]{Damming_Regular_L_T_SplitByTrial_Remapped.png}
-    \caption{Debris count adjusted using total of pieces impacting structure.}
+    \caption{Debris count of pieces causing structural impact.}
     \label{fig:damming_regular_remap}
 \end{figure}
 
@@ -381,7 +382,7 @@ An adjustment became necessary because debris frame exceeded the structure’s w
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.9\textwidth]{Impact_probabilities.png}
-    \caption{Impact probabilities across random trials. A larger frame-to-structure width ratio proportionally reduces the fraction of debris impacting the structure.}
+    \caption{Impact probabilities across random trials for various debris field widths.}
     \label{fig:impact_probabilities}
 \end{figure}
 
@@ -391,7 +392,7 @@ The corrected median plots reflect these adjustments. Figure~\ref{fig:random_fir
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.75\textwidth]{First_Peak_Median_Single_vs_Multi_Adjusted.png}
-    \caption{Median normalized first impacts in random fields, adjusted by structure width. Single-size debris fields produce higher impacts than multi-size fields. In multi-size fields, filtering out large pieces shows that smaller debris adds modest additional impact.}
+    \caption{Median normalized first impact reaction forces in random fields, adjusted for debris field width.}
     \label{fig:random_first_median_adjusted}
 \end{figure}
 
@@ -410,9 +411,10 @@ In random configurations, damming forces followed a different pattern compared t
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=0.75\textwidth]{Damming_Median_Single_vs_Multi_Adjusted.png}
-    \caption{Median normalized damming forces in random fields, adjusted by structure width. Forces are roughly 100\% higher than wave-only loading, with packing ratio effects stronger in single-size fields and weaker in multi-size fields.}
+    \caption{Median normalized damming reaction forces in random fields, adjusted for debris field width. Forces are roughly 100\% higher than wave-only loading, with packing ratio effects stronger in single-size fields and weaker in multi-size fields.}
     \label{fig:random_damming_median_adjusted}
 \end{figure}
+
 The corrected median values (Figure~\ref{fig:random_damming_median_adjusted}) show a noteworthy consistency: across all densities and debris counts, normalized damming forces remained close to a 100\% increase over baseline wave loading. This indicates that while packing ratio and debris size distribution influenced variability, the sustained force contribution of damming in random fields remained broadly similar across conditions. In other words, random configurations consistently doubled the baseline wave load, with single-size fields amplifying clustering effects and multi-size fields reducing them through blockage disruption.
 
 \section{Conclusions} The experiments demonstrate that debris orientation, size distribution, and packing ratio are all factors in determining the forces exerted on coastal structures. Longitudinal groups generated the largest impact peaks, while transverse groups dominated sustained damming forces. Random and multi-size fields generally produced smaller and more variable loads, highlighting their reduced capacity for synchronous impacts and stable blockages. 
