Updates from Overleaf

--- a/Thesis.bib
+++ b/Thesis.bib
@@ -61,7 +61,7 @@
 @article{bonusTsunamiDebrisMotion2025,
   title = {Tsunami Debris Motion and Loads in a Scaled Port Setting: {{Comparative}} Analysis of Three State-of-the-Art Numerical Methods against Experiments},
   shorttitle = {Tsunami Debris Motion and Loads in a Scaled Port Setting},
-  author = {Bonus, Justin and Spr{\"o}er, Felix and Winter, Andrew and Arduino, Pedro and Krautwald, Clemens and Motley, Michael and Goseberg, Nils},
+  author = {Bonus, J. and Spr{\"o}er, Felix and Winter, Andrew and Arduino, Pedro and Krautwald, Clemens and Motley, Michael and Goseberg, Nils},
   year = {2025},
   month = apr,
   journal = {Coastal Engineering},
@@ -309,6 +309,17 @@
 }
 
 @article{Shekhar2020,
+  title = {Conceptual Evaluation of Tsunami Debris Field Damming and Impact Forces},
+  author = {Shekhar, K. and Winter, A. O. and Alan, M. S. and Arduino, P. and Miller, G. and Motley, M. and Eberhard, M. and Barbosa, A. R. and Lomonaco, P and Cox, D. T.},
+  year = {2020},
+  journal = {J. Waterway, Port, Coastal, Ocean Eng.},
+  volume = {146},
+  number = {6},
+  pages = {04020039},
+  doi = {10.1061/(ASCE)WW.1943-5460.000060}
+}
+
+@article{Shekhar2020_b,
   title = {Experimental and Numerical Insights on Tsunami-like Wave Forces on Coastal Structures},
   author = {Shekhar, K. and Alam, M. S. and Winter, A. O. and Galant, G. and Barbosa, A. and Motley, M. and Eberhard, M. and Cox, D.},
   year = {2020},
