--- a/main.tex
+++ b/main.tex
@@ -50,7 +50,7 @@ The debris impact experiments discussed in this paper were conducted in the Larg
   \label{fig:waveflume}
 \end{figure}
 
-Wave paddle motions were prescribed using an error function displacement, which produces highly repeatable, unbroken, solitary waves. Repeatability was prioritized, as it ensured consistent wave conditions for comparing debris configurations. The flow velocity near the structure was measured using an acoustic doppler velocimeter (ADV) and found to be approximately 1.3 m/s. Debris velocity, determined through video-based tracking, averaged around 0.8 m/s away from the structure, but the velocity consistently decreased as the debris approached teh structure. The still water level was set at 2.0 m relative to the lowest point in the flume, corresponding to a 0.25 m depth at the structure to ensure no air gap beneath the base of the test structure.
+Wave paddle motions were prescribed using an error function displacement, which produces highly repeatable, unbroken, solitary waves. Repeatability was prioritized, as it ensured consistent wave conditions for comparing debris configurations. The flow velocity near the structure was measured using an acoustic doppler velocimeter (ADV) and found to be approximately 1.3 m/s. The debris velocity, determined through video-based tracking, averaged around 0.8 m/s away from the structure, but the velocity consistently decreased as the debris approached the structure. The still water level was set at 2.0 m relative to the lowest point in the flume, corresponding to a 0.25 m depth at the structure to ensure no air gap beneath the base of the test structure.
 
 Front and back views of the structure can be seen in Figure \ref{fig:teststructure_views}. The test structure was a 1.016 m square base × 0.615 m tall box constructed from sheet metal and steel framing (similar to \citep{winterTsunamiLikeWaveForces2020}), positioned 43.8 m from the wavemaker. It was mounted on low-friction bearings attached to a wall-mounted frame, allowing measurement of streamwise (x) and transverse (y) reactions. The internal frame was stiffened with hollow steel sections for stiffness. Additional aluminum-encased stiffeners improved rotational resistance and load transfer. Eight load cells were installed: two streamwise, two transverse, and four vertical pancake cells, all sampled at 1200 Hz. Steel legs, 0.25 m in height, were placed below the structure but were not load bearing. 
 
@@ -332,7 +332,7 @@ Figure~\ref{fig:firstpeak_regular_split} and Figure~\ref{fig:laterpeak_regular_r
 
 Figures \ref{fig:firstpeak_regular_original} shows the normalized impact reaction forces versus total number of debris pieces for five longitudinal and five transverse configurations.  For specific cases, the 24T-W and 16T-W tests, the width of the debris field exceeded the structure’s width. Consequently, not all debris pieces made contact with the structure. To compensate for this effect, the number of debris pieces for these configurations was reduced to count only the number of pieces that started initially within the width of the test structure.  Figure \ref{fig:firstpeak_regular_split} shows the corrected plot. For example adjusting the 24T-W case made it comparable to a 12T case, because only half of the pieces fell within the width of the test structure. 
 
-For regular configurations, the magnitudes first impacts (Fig. \ref{fig:firstpeak_regular_split}) scaled approximately linearly with the adjusted number of debris pieces (Figure~\ref{fig:firstpeak_regular_split}).  This relationship was consistent for both longitudinal and transverse configurations, with the transverse configurations having on average an impact force that was xx percent lower than that for the comparable longitudinal configurations. 
+For regular configurations, the magnitudes first impacts (Fig. \ref{fig:firstpeak_regular_split}) scaled approximately linearly with the adjusted number of debris pieces (Figure~\ref{fig:firstpeak_regular_split}).  This relationship was consistent for both longitudinal and transverse configurations, with the transverse configurations having on average an impact force that was 25 percent lower than that for the comparable longitudinal configurations. 
 
 Later impacts, by contrast, exhibited nonlinear behavior, showing growth that eventually saturated as debris counts increased (Figure~\ref{fig:laterpeak_regular_remap}). This saturation suggests that once a certain number of pieces are present, additional debris no longer contributes significantly to impact loading because not all debris strike the structure simultaneously. This behavior also relates to the influence of submerged conditions and the added-mass effect from the surrounding water. Notably, for smaller debris counts, the later impact can exceed the first impact, suggesting that the water mass accumulating behind the structure contributes significantly to the observed force. As the number of debris pieces increases, this added-water contribution becomes less significant, since the volume of water pushed behind the structure remains essentially constant even as the debris count grows.
 
